[package]
name = "iter-array-ext"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
license = "MIT"

[dependencies]

[lints.clippy]
complexity = "deny"

nursery = { level = "deny", priority = -1 }

pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"
